adding final touches

--- a/cart.html
+++ b/cart.html
@@ -23,12 +23,11 @@
                     	<li><a href="contact.html">Contact</a></li> 
                 	</ul>
                 </nav>
-				<form id="searchBar" action="form.php" method="post"> 
-                    <input type="text" required size="26" placeholder="Search">    
-                </form>
-                <ul>
-					<li class="shoppingCart"><a href="cart.html"><img src=images/SVG/cart_logo.svg alt="Cart SVG"></a></li>
-				</ul>
+				<div class="searchBar">
+					<img src=images/magnifying_glass.png alt="Magnifying Glass">
+					<p>Search</p>
+				</div>
+                <ul><li class="shoppingCart"><a href="cart.html"><img src=images/SVG/cart_logo.svg alt="Cart SVG"></a></li></ul>
 			</header>
 
 
@@ -39,14 +38,14 @@
 					<h2 class="hidden">Purchase</h2>
 					<section class="purchasePic">
 						<h2 class="hidden">Purchase Image</h2>
-						<img src="images/index/Hero_Image_Scroll.jpg" alt="Hero Image Scroll">
+						<img src="images/blank_bottle.jpg" alt="Hero Image Scroll">
 					</section>
 					<section class="purchaseTxt">
-						<h4>Lorem Ipsum</h4>
+						<h4>Highland Pils</h4>
 						<div class="lineDividerSmall"></div>
-						<h4>Consectetur adipiscing: Lorem ipsum</h4>
-						<h4>Dolor sit amet: Elit</h4>
-						<h4>Etiam viverra: Ligula magna</h4>
+						<h4>Alcohol Contents: |4.9% ABV & 22 IBU| </h4>
+						<h4>Region: CANADA</h4>
+						<h4>Beer Number: #172389</h4>
 						<h4>CAN $2.85</h4>
 						<div class="qtyBtn">
 							<p>QTY: 1 ></p>
@@ -58,14 +57,14 @@
 					<h2 class="hidden">Purchase</h2>
 					<section class="purchasePic">
 						<h2 class="hidden">Purchase Image</h2>
-						<img src="images/index/Hero_Image_Scroll.jpg" alt="Hero Image Scroll">
+						<img src="images/blank_bottle.jpg" alt="Hero Image Scroll">
 					</section>
 					<section class="purchaseTxt">
-						<h4>Lorem Ipsum</h4>
+						<h4>Lunnenburg</h4>
 						<div class="lineDividerSmall"></div>
-						<h4>Consectetur adipiscing: Lorem ipsum</h4>
-						<h4>Dolor sit amet: Elit</h4>
-						<h4>Etiam viverra: Ligula magna</h4>
+						<h4>Alcohol Contents: |6.5% ABV & 28 IBU|</h4>
+						<h4>Region: CANADA</h4>
+						<h4>Beer Number: #125734</h4>
 						<h4>CAN $2.85</h4>
 						<div class="qtyBtn">
 							<p>QTY: 6 ></p>
@@ -108,7 +107,7 @@
                 </nav>
 				<p class="copyright">C Alexander  Keith’s  /  PUMA,  2020</p>
 				<div class="countrySelect">
-					<p>Country</p>
+					<p>CANADA</p>
 				</div>
 			</footer>
 
