--- a/index.html
+++ b/index.html
@@ -23,16 +23,17 @@
                     	<li><a href="contact.html">Contact</a></li> 
                 	</ul>
                 </nav>
-				<form id="searchBar" action="form.php" method="post"> 
-                    <input type="text" required size="26" placeholder="Search">    
-                </form>
+				<div class="searchBar">
+					<img src=images/magnifying_glass.png alt="Magnifying Glass">
+					<p>Search</p>
+				</div>
                 <ul><li class="shoppingCart"><a href="cart.html"><img src=images/SVG/cart_logo.svg alt="Cart SVG"></a></li></ul>
 			</header>
 
 
 			<section class="heroImgScrl">
 				<h2 class="hidden">Hero Image Scroll</h2>
-				<img src="images/index/Hero_Image_Scroll.jpg" alt="Hero Image Scroll">
+				<img src="images/barrel_banner.jpg" alt="Hero Image Scroll">
 			</section>
 
 
@@ -44,12 +45,12 @@
 					<section class="imgText"> <!-- Start Product Box -->
 						<h2 class="hidden">Featured Beer Text and Image</h2>
 						<div class="ftdImg">
-							<img src="images/index/product_image.jpg" alt="Product Image">
+							<img src="images/blank_bottle_no_background.png" alt="Product Image">
 						</div>
 						<section class="ftdText">
-							<h4>Beer Name</h4>
-							<p class="ftdInfo">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem Ipsum Lorem ipsum Lorem ipsum dolor.</p>
-							<p>CAN $2.85</p>
+							<h4>India Pale Ale</h4>
+							<p class="ftdInfo">Subtle spice and herb notes from the hops and yeast come together over a light cereal grain.</p>
+							<p>|5% ABV & 13 IBU|</p>
 							<ul>
 								<li class="prdctBtn"><a href="products.html"> MORE </a></li>
 							</ul>
@@ -58,12 +59,12 @@
 					<section class="imgText"> <!-- Start Product Box -->
 						<h2 class="hidden">Featured Beer Text and Image 2</h2>
 						<div class="ftdImg">
-							<img src="images/index/product_image.jpg" alt="Product Image">
+							<img src="images/blank_bottle_no_background.png" alt="Product Image">
 						</div>
 						<section class="ftdText">
-							<h4>Beer Name</h4>
-							<p class="ftdInfo">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem Ipsum Lorem ipsum Lorem ipsum dolor.</p>
-							<p>CAN $2.85</p>
+							<h4>Light Ale</h4>
+							<p class="ftdInfo">Known for its distinctively light flavour, refrashing aroma and special pale colour.</p>
+							<p>|4% ABV & 10 IBU|</p>
 							<ul>
 								<li class="prdctBtn"><a href="products.html"> MORE </a></li>
 							</ul>
@@ -72,12 +73,12 @@
 					<section class="imgText"> <!-- Start Product Box -->
 						<h2 class="hidden">Featured Beer Text and Image 3</h2>
 						<div class="ftdImg">
-							<img src="images/index/product_image.jpg" alt="Product Image">
+							<img src="images/blank_bottle_no_background.png" alt="Product Image">
 						</div>
 						<section class="ftdText">
-							<h4>Beer Name</h4>
-							<p class="ftdInfo">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem Ipsum Lorem ipsum Lorem ipsum dolor. </p>
-							<p>CAN $2.85</p>
+							<h4>Amber Ale</h4>
+							<p class="ftdInfo">Dark amber hue and rich, red overtones, it delivers mild caramel flavours.</p>
+							<p>|5% ABV & 15 IBU|</p>
 							<ul>
 								<li class="prdctBtn"><a href="products.html"> MORE </a></li>
 							</ul>
@@ -93,32 +94,35 @@
 			<section class="ourBrand">
 				<div>
 					<h2>Our Brand</h2>
-					<p class="brndInfo">Lorem Ipsum Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem Ipsum Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem Ipsum Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem Ipsum Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem Ipsum Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem Ipsum Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+					<p class="brndInfo">Alexander Keith's beer has been raised in Nova Scotia since 1820. It's a province where the water informs every aspect of its character from dramatic scenery, to distinctive culture and of course, exceptional beer. The coast itself is where everything comes together: the land, the sea, and the people who have called it all home for generations. Our inspiration since 1820, is derived from these remarkable qualities and the extraordinary people met along the way.</p>
 					<ul>
 						<li class="moreBtn"><a href="ourBrand.html"> MORE </a></li>
 					</ul>
 				</div>
 				<div class="brndImg">
-					<img src="images/index/product_image.jpg" alt="Image 448w 303h">
+					<img src="images/our_brand_home.jpg" alt="Image 448w 303h">
 				</div>
 			</section>
+			
 
 
 		<footer class="mainFooter">
-				<h2 class="hidden">Main Footer</h2>
-				<div class="logoFooter"><img src=images/SVG/a.kieths_puma_logo.svg alt="a.kieths_puma_logo"></div>
-				<nav class="footerNav">
-					<h2 class="hidden">Footer Nav</h2>
-					<ul>
-                    	<li><a href="#">Home</a></li>  
-                    	<li><a href="products.html">Products</a></li>
-                    	<li><a href="ourBrand.html">Our Brand</a></li>
-                    	<li><a href="contact.html">Contact</a></li> 
-                	</ul>
-                </nav>
-				<p class="copyright">C Alexander  Keith’s  /  PUMA,  2020</p>
-				<div class="countrySelect">Country</div>
-			</footer>
+			<h2 class="hidden">Main Footer</h2>
+			<div class="logoFooter"><img src=images/SVG/a.kieths_puma_logo.svg alt="a.kieths_puma_logo"></div>
+			<nav class="footerNav">
+				<h2 class="hidden">Footer Nav</h2>
+				<ul>
+                    <li><a href="index.html">Home</a></li>  
+                    <li><a href="products.html">Products</a></li>
+                    <li><a href="ourBrand.html">Our Brand</a></li>
+                    <li><a href="contact.html">Contact</a></li> 
+                </ul>
+               </nav>
+			<p class="copyright">C Alexander  Keith’s  /  PUMA,  2020</p>
+			<div class="countrySelect">
+				<p>CANADA</p>
+			</div>
+		</footer>
 
 
 		</main>
