--- a/ourBrand.html
+++ b/ourBrand.html
@@ -23,18 +23,17 @@
                     	<li><a href="contact.html">Contact</a></li> 
                 	</ul>
                 </nav>
-				<form id="searchBar" action="form.php" method="post"> 
-                    <input type="text" required size="26" placeholder="Search">    
-                </form>
-                <ul>
-					<li class="shoppingCart"><a href="cart.html"><img src=images/SVG/cart_logo.svg alt="Cart SVG"></a></li>
-				</ul>
+				<div class="searchBar">
+					<img src=images/magnifying_glass.png alt="Magnifying Glass">
+					<p>Search</p>
+				</div>
+                <ul><li class="shoppingCart"><a href="cart.html"><img src=images/SVG/cart_logo.svg alt="Cart SVG"></a></li></ul>
 			</header>
 
 
 			<section class="heroImg">
 				<h2 class="hidden">Hero Image</h2>
-				<img src="images/index/Hero_Image.jpg" alt="Hero Image">
+				<img src="images/brand_banner.png" alt="Hero Image">
 			</section>
 
 
@@ -43,19 +42,19 @@
 				<section class="brandP1">
 					<h2> Our Brand </h2>
 					<div class="lineDivider"></div>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
+					<p>Alexander Keith's beer has been raised in Nova Scotia since 1820. It's a province where the water informs every aspect of its character from dramatic scenery, to distinctive culture and of course, exceptional beer. The coast itself is where everything comes together: the land, the sea, and the people who have called it all home for generations. Our inspiration since 1820, is derived from these remarkable qualities and the extraordinary people met along the way.</p>
 				</section>
 				<section class="brandImg&P">
 					<div class="infoAndpic">
 						<div class="brndInfo1And2">
-							<img src="images/ourBrand/our_brand_img1.jpg" alt="Our Brand Img">
-							<h5>LOREM IPSUM</h5>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Risus commodo viverra maecenas accumsan facilisis. </p>
+							<img src="images/a.keiths_brewery.jpg" alt="Our Brand Img">
+							<h5>History</h5>
+							<p>Alexander Keith's is a​ brewery​ in​ Halifax, Nova Scotia​, Canada. It is part of Anheuser-Busch InBev​, a holdings company based in​ Leuven​, Belgium, which owns over 400 beer brands globally. The brewery was founded in 1820 by​ Alexander Keith​ who had immigrated from​ Scotland​ three years previously. He was 25 at the time. In 1928, the business was sold to​ Oland Brewery​, which was in turn sold to the​ Labatt Brewing Company​.  By the 1990s Alexander Keith's​ India Pale Ale​ (IPA) was the most popular beer in Nova Scotia.  Alexander Keith’s products were originally produced in the Halifax brewery only for sale in the​ Maritimes</p>
 						</div>
 						<div class="brndInfo1And2">
-							<img src="images/ourBrand/our_brand_img1.jpg" alt="Our Brand Img">
-							<h5>LOREM IPSUM</h5>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Risus commodo viverra maecenas accumsan facilisis. </p>
+							<img src="images/hops_on_table.jpg" alt="Our Brand Img">
+							<h5>Local Products</h5>
+							<p>Some unique aspects about Alexander Keith’s is that they have many different and interesting flavors of beer. These flavors also include products that are either locally grown in Nova Scotia or products that are produced by small companies around Nova Scotia. Some examples of small companies that work together with Alexander Keith’s are “Big Sky” who supply the sea buckthorn for the backyard brew, and “Laughing Whale” who supplies the coffee for the Lunenburg brew.</p>
 						</div>
 					</div>
 				</section>
@@ -70,12 +69,14 @@
 					<ul>
                     	<li><a href="index.html">Home</a></li>  
                     	<li><a href="products.html">Products</a></li>
-                    	<li><a href="#">Our Brand</a></li>
+                    	<li><a href="ourBrand.html">Our Brand</a></li>
                     	<li><a href="contact.html">Contact</a></li> 
                 	</ul>
                 </nav>
 				<p class="copyright">C Alexander  Keith’s  /  PUMA,  2020</p>
-				<div class="countrySelect">Country</div>
+				<div class="countrySelect">
+					<p>CANADA</p>
+				</div>
 			</footer>
 
 
