--- a/products.html
+++ b/products.html
@@ -23,18 +23,17 @@
                     	<li><a href="contact.html">Contact</a></li> 
                 	</ul>
                 </nav>
-				<form id="searchBar" action="form.php" method="post"> 
-                    <input type="text" required size="26" placeholder="Search">    
-                </form>
-                <ul>
-					<li class="shoppingCart"><a href="cart.html"><img src=images/SVG/cart_logo.svg alt="Cart SVG"></a></li>
-				</ul>
+				<div class="searchBar">
+					<img src=images/magnifying_glass.png alt="Magnifying Glass">
+					<p>Search</p>
+				</div>
+                <ul><li class="shoppingCart"><a href="cart.html"><img src=images/SVG/cart_logo.svg alt="Cart SVG"></a></li></ul>
 			</header>
 
 
 			<section class="heroImg">
 				<h2 class="hidden">Hero Image</h2>
-				<img src="images/index/Hero_Image.jpg" alt="Hero Image">
+				<img src="images/beer_banner.jpg" alt="Hero Image">
 			</section>
 
 
@@ -44,50 +43,50 @@
 				<h3>Classic Series</h3>
 				<section class="series">
 					<h2 class="hidden">Classic Series Content</h2>
-					<section> <!-- Start Product Box -->
+					<section class="beerContent"> <!-- Start Product Box -->
 						<h2 class="hidden">Beer #1 Content</h2>
 						<div class="beerimg">
-							<img src="images/index/product_image.jpg" alt="Product Image">
+							<img src="images/blank_bottle.jpg" alt="Product Image">
 						</div>
-						<h4>Beer #1</h4>
-						<p class="prdctinfo">Lorem Ipsum Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem Ipsum Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-						<p>CAN $2.85</p>
+						<h4>India Pale Ale</h4>
+						<p class="prdctinfo">Subtle spice and herb notes from the hops and yeast come together over a light cereal grain.</p>
+						<p>|5% ABV & 13 IBU|</p>
 						<ul>
 							<li class="prdctBtn"><a href="#"> MORE </a></li>
 						</ul>
 					</section>
-					<section> <!-- Start Product Box -->
+					<section class="beerContent"> <!-- Start Product Box -->
 						<h2 class="hidden">Beer #2 Content</h2>
 						<div class="beerimg">
-							<img src="images/index/product_image.jpg" alt="Product Image">
+							<img src="images/blank_bottle.jpg" alt="Product Image">
 						</div>
-						<h4>Beer #2</h4>
-						<p class="prdctinfo">Lorem Ipsum Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem Ipsum Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-						<p>CAN $2.85</p>
+						<h4>Light Ale</h4>
+						<p class="prdctinfo">Known for its distinctively light flavour, refreshing aroma and special pale colour.</p>
+						<p>|4% ABV & 10 IBU|</p>
 						<ul>
 							<li class="prdctBtn"><a href="#"> MORE </a></li>
 						</ul>
 					</section>
-					<section> <!-- Start Product Box -->
+					<section class="beerContent"> <!-- Start Product Box -->
 						<h2 class="hidden">Beer #3 Content</h2>
 						<div class="beerimg">
-							<img src="images/index/product_image.jpg" alt="Product Image">
+							<img src="images/blank_bottle.jpg" alt="Product Image">
 						</div>
-						<h4>Beer #3</h4>
-						<p class="prdctinfo">Lorem Ipsum Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem Ipsum Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-						<p>CAN $2.85</p>
+						<h4>Amber Ale</h4>
+						<p class="prdctinfo">Dark amber hue and rich, red overtones, it delivers mild caramel flavours.</p>
+						<p>|5% ABV & 15 IBU|</p>
 						<ul>
 							<li class="prdctBtn"><a href="#"> MORE </a></li>
 						</ul>
 					</section>
-					<section> <!-- Start Product Box -->
+					<section class="beerContent"> <!-- Start Product Box -->
 						<h2 class="hidden">Beer #4 Content</h2>
 						<div class="beerimg">
-							<img src="images/index/product_image.jpg" alt="Product Image">
+							<img src="images/blank_bottle.jpg" alt="Product Image">
 						</div>
-						<h4>Beer #4</h4>
-						<p class="prdctinfo">Lorem Ipsum Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem Ipsum Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-						<p>CAN $2.85</p>
+						<h4>Highland Pils</h4>
+						<p class="prdctinfo">Heritage variety of Scotish malt perfectly married with bright lime, mojito, herbal aroma.</p>
+						<p>|4.9% ABV & 22 IBU|</p>
 						<ul>
 							<li class="prdctBtn"><a href="#"> MORE </a></li>
 						</ul>
@@ -96,50 +95,50 @@
 				<h3>Limited Series</h3>
 				<section class="series">
 					<h2 class="hidden">Limited Series Content</h2>
-					<section> <!-- Start Product Box -->
+					<section class="beerContent"> <!-- Start Product Box -->
 						<h2 class="hidden">Beer #1 Content</h2>
 						<div class="beerimg">
-							<img src="images/index/product_image.jpg" alt="Product Image">
+							<img src="images/blank_bottle.jpg" alt="Product Image">
 						</div>
-						<h4>Beer #1</h4>
-						<p class="prdctinfo">Lorem Ipsum Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem Ipsum Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-						<p>CAN $2.85</p>
+						<h4>Saison du Brame</h4>
+						<p class="prdctinfo">Yeast aromas and flavours of bubble gum, pear and black pepper with herbal notes.</p>
+						<p>|6% ABV & 24 IBU|</p>
 						<ul>
 							<li class="prdctBtn"><a href="#"> MORE </a></li>
 						</ul>
 					</section>
-					<section> <!-- Start Product Box -->
+					<section class="beerContent"> <!-- Start Product Box -->
 						<h2 class="hidden">Beer #2 Content</h2>
 						<div class="beerimg">
-							<img src="images/index/product_image.jpg" alt="Product Image">
+							<img src="images/blank_bottle.jpg" alt="Product Image">
 						</div>
-						<h4>Beer #2</h4>
-						<p class="prdctinfo">Lorem Ipsum Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem Ipsum Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-						<p>CAN $2.85</p>
+						<h4>Rubus Grigio</h4>
+						<p class="prdctinfo">Aged in barrels for 6 months refermented on Nova Scotia blackberries and raspberries.</p>
+						<p>|5.8% ABV & 7 IBU|</p>
 						<ul>
 							<li class="prdctBtn"><a href="#"> MORE </a></li>
 						</ul>
 					</section>
-					<section> <!-- Start Product Box -->
+					<section class="beerContent"> <!-- Start Product Box -->
 						<h2 class="hidden">Beer #3 Content</h2>
 						<div class="beerimg">
-							<img src="images/index/product_image.jpg" alt="Product Image">
+							<img src="images/blank_bottle.jpg" alt="Product Image">
 						</div>
-						<h4>Beer #3</h4>
-						<p class="prdctinfo">Lorem Ipsum Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem Ipsum Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-						<p>CAN $2.85</p>
+						<h4>Lunnenburg</h4>
+						<p class="prdctinfo">Brewed with dark malts, organic cacao nibs, and Laughing Whale espresso beans.</p>
+						<p>|6.5% ABV & 28 IBU|</p>
 						<ul>
 							<li class="prdctBtn"><a href="#"> MORE </a></li>
 						</ul>
 					</section>
-					<section> <!-- Start Product Box -->
+					<section class="beerContent"> <!-- Start Product Box -->
 						<h2 class="hidden">Beer #4 Content</h2>
 						<div class="beerimg">
-							<img src="images/index/product_image.jpg" alt="Product Image">
+							<img src="images/blank_bottle.jpg" alt="Product Image">
 						</div>
-						<h4>Beer #4</h4>
-						<p class="prdctinfo">Lorem Ipsum Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem Ipsum Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-						<p>CAN $2.85</p>
+						<h4>Argyle</h4>
+						<p class="prdctinfo">Combines Champagne-like dryness and effervescence with an IPA dosing of hops.</p>
+						<p>|6% ABV & 30 IBU|</p>
 						<ul>
 							<li class="prdctBtn"><a href="#"> MORE </a></li>
 						</ul>
@@ -155,13 +154,15 @@
 					<h2 class="hidden">Footer Nav</h2>
 					<ul>
                     	<li><a href="index.html">Home</a></li>  
-                    	<li><a href="#">Products</a></li>
+                    	<li><a href="products.html">Products</a></li>
                     	<li><a href="ourBrand.html">Our Brand</a></li>
                     	<li><a href="contact.html">Contact</a></li> 
                 	</ul>
                 </nav>
 				<p class="copyright">C Alexander  Keith’s  /  PUMA,  2020</p>
-				<div class="countrySelect">Country</div>
+				<div class="countrySelect">
+					<p>CANADA</p>
+				</div>
 			</footer>
 
 
