adding extra final touches

--- a/contact.html
+++ b/contact.html
@@ -42,14 +42,18 @@
 				<div class="lineDivider"></div>
 				<p>Want to get in touch with our great company? Please feel free to fill out the contact form below. This will generate an email that goes into our email box and we will respond as quickly as possible.</p>
 				<section class="contactForm">
+					<h2 class="hidden">Contact Form</h2>
 					<section class="contactRow">
+						<h2 class="hidden">Row</h2>
 						<section class="inputBox">
+							<h2 class="hidden">Input Box</h2>
 							<form action="form.php" method="post">
                     			<label>First Name</label>
                     			<div></div> 
                     		</form>
                     	</section>
                     	<section class="inputBox">
+                    		<h2 class="hidden">Input Box</h2>
 							<form action="form.php" method="post">
                     			<label>Last Name</label>
                     			<div></div> 
@@ -57,13 +61,16 @@
                     	</section>
                     </section>
                    	<section class="contactRow">
+                   		<h2 class="hidden">Row</h2>
 						<section class="inputBox">
+							<h2 class="hidden">Input Box</h2>
 							<form action="form.php" method="post">
                     			<label>Email</label>
                     			<div></div> 
                     		</form>
                     	</section>
                     	<section class="inputBox">
+                    		<h2 class="hidden">Input Box</h2>
 							<form action="form.php" method="post">
                     			<label>Phone Number</label>
                     			<div></div> 
@@ -71,12 +78,14 @@
                     	</section>
                     </section>
                     <section class="inputBoxMessage">
+                    	<h2 class="hidden">Message Row</h2>
 						<form action="form.php" method="post">
                     		<label>Message</label>
                     		<div></div> 
                     	</form>
                     </section>
                     <section class="contactRowBottom">
+                    	<h2 class="hidden">Row</h2>
                     	<div class="submitAndReset">
 							<p>Submit</p>
 						</div>
@@ -84,6 +93,7 @@
 							<p>Reset</p>
 						</div>
                     </section>
+                </section>
 			</section>
 
 
